@@ -2187,6 +2187,15 @@ Namespace My.Resources
         End Property
         
         '''<summary>
+        '''  Looks up a localized string similar to The startup connection file could not be loaded.{0}{0}{2}{0}{3}{0}{0}In order to prevent data loss, {1} will now exit..
+        '''</summary>
+        Friend ReadOnly Property strErrorStartupConnectionFileLoad() As String
+            Get
+                Return ResourceManager.GetString("strErrorStartupConnectionFileLoad", resourceCulture)
+            End Get
+        End Property
+        
+        '''<summary>
         '''  Looks up a localized string similar to VerifyDatabaseVersion (Config.Connections.Save) failed. {0}.
         '''</summary>
         Friend ReadOnly Property strErrorVerifyDatabaseVersionFailed() As String
